crates/ridge-parser/tests/fixtures/errors/p013_deferred_instance.ridge
-- expect: P031
-- Trigger: an `instance` declaration with no method body produces P031.
instance Eq Int =
